# executor-cases

./: README.md
crazy/: README.md
crazy/case1/: a.py  b.py  c.py  config.yml  exec.py
crazy/case1/dep_d/: d.py
crazy/case1/dep_e/: __init__.py  e.py
crazy/case2/: c.py  config.yml  exec.py
error/case1/: Dockerfile
error/case2/: config.yml  exec.py
error/case3/: exec.py
success/case1/: config.yml  exec.py
success/case2/: config.yml  exec.py
success/case3/: config.yml  exec.py
success/case4/: config.yml  exec.py
success/case5/: config.yml  requirements.txt
success/case6/: config.yml  exec.py  requirements.txt
success/case6-2/: pyproject.toml
success/case6-3/: config.yml  pyproject.toml
success/case7/: Dockerfile  config.yml  exec.py
success/case8/: Dockerfile  config.yml  manifest.yml
success/case9/: Dockerfile  README.md  config.yml  exec.py  manifest.yml
success/multi1/: hubble.yml  setup.py
success/multi1/exec1/: config.yml  exec.py
success/multi1/exec2/: config.yml  exec.py
success/multi1/jinahub/exec1/: Dockerfile  config.yml  exec.py
success/multi1/jinahub/exec2/: config.yml  exec.py  requirements.txt
