[tool.poetry]
name = "langflow"
version = "0.0.71"
description = "A Python package with a built-in web application"
authors = ["Logspace <contact@logspace.ai>"]
maintainers = [
    "Gabriel Almeida <gabriel@logspace.ai>",
    "Ibis Prevedello <ibiscp@gmail.com>",
    "Lucas Eduoli <lucaseduoli@gmail.com>",
    "Otávio Anovazzi <otavio2204@gmail.com>",
]
repository = "https://github.com/logspace-ai/langflow"
license = "MIT"
readme = "README.md"
keywords = ["nlp", "langchain", "openai", "gpt", "gui"]
packages = [{ include = "langflow", from = "src/backend" }]
include = ["src/backend/langflow/*", "src/backend/langflow/**/*"]


[tool.poetry.scripts]
langflow = "langflow.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"
mypy = "^1.1.1"
ruff = "^0.0.254"
httpx = "^0.23.3"
pytest = "^7.2.2"
types-requests = "^2.28.11"
requests = "^2.28.0"
pytest-cov = "^4.0.0"
pandas-stubs = "^2.0.0.230412"
types-pillow = "^9.5.0.2"


[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
